--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "multer": "^1.4.2",
     "path": "^0.12.7",
     "prerender-node": "^3.2.5",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-snap": "^1.23.0"
   },
   "devDependencies": {
     "concurrently": "^5.3.0",
